# haskell-scotty-elm-ws-template

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  elm.json  scotty-elm-ws-template.cabal
src/: Const.hs  Main.hs  Opts.hs  Routes.hs  View.hs  Websockets.hs
src/Data/: Database.hs  Model.hs  Mysql.hs  Postgres.hs  Sqlite.hs
src/elm/: Main.elm  Types.elm  Websocket.elm
static/: websocket.js
