name:                scotty-elm-ws-template
version:             0.3.0
synopsis:            Bare template implementing a Scotty+Elm+Websocket chat server/client
-- description:
homepage:            https://github.com/wuest/haskell-scotty-elm-ws-template
bug-reports:         https://github.com/wuest/haskell-scotty-elm-ws-template/issues
license:             BSD3
license-file:        LICENSE
author:              Tina Wuest
maintainer:          tina@wuest.me
copyright:           2019-2024 Tina Wuest
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/wuest/haskell-scotty-elm-ws-template.git

executable scotty-elm-ws-template
  main-is:          Main.hs
  ghc-options:      -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction -O2 -threaded -static
  other-modules:      Opts
                    , View
                    , Const
                    , Routes
                    , Websockets
                    -- Uncomment as appropriate for database backend/templating support
--                  , Data.Model
--                  , Data.Database

  build-depends:      base                  >= 4.9  && < 4.20
                    , text                  >= 1.2  && < 2.2
                    , file-embed            >= 0.0  && < 0.1
                    , directory             >= 1.3  && < 1.4
                    , transformers          >= 0.5  && < 0.7
                    , mtl                   >= 2.2  && < 2.4
                    , stm                   >= 2.4  && < 2.6
                    , wai                   >= 3.2  && < 3.3
                    , wai-extra             >= 3.0  && < 3.2
                    , wai-middleware-static >= 0.8  && < 0.10
                    , wai-websockets        >= 3.0  && < 3.1
                    , websockets            >= 0.12 && < 0.14
                    , warp                  >= 3.2  && < 3.5
                    , scotty                >= 0.22 && < 0.23
                    , blaze-html            >= 0.9  && < 0.10
                    , blaze-markup          >= 0.8  && < 0.9
                    , aeson                 >= 2.0  && < 2.3
                    , time                  >= 1.8  && < 1.15
                    , monad-logger          >= 0.3  && < 0.4
                    , bytestring            >= 0.10 && < 0.13
                    -- Uncomment for database support and Model templating
                    --
                    -- If removing specific drivers from the compilation is
                    -- desired, edit Data/Database.hs to remove references to
                    -- any removed drivers
--                  , persistent            >= 2.10 && < 2.15
--                  , persistent-template   >= 2.7  && < 2.13
--                  , persistent-mysql      >= 2.10 && < 2.14
--                  , persistent-sqlite     >= 2.10 && < 2.14
--                  , persistent-postgresql >= 2.10 && < 2.14


  hs-source-dirs:   src
  default-language: Haskell2010
